--- a/main.html
+++ b/main.html
@@ -11,12 +11,8 @@
       <tr>
 		  <td>
 			  <table>
-				  <th>
-					  <tr>
-						  <td colspan="2">
-							  Nested Table 2
-						  </td>
-					  </tr>
+					<th colspan="2">
+						  Nested Table 2
 				  </th>
 				  <tr>
 					  <td>Column 1</td>
@@ -30,11 +26,7 @@
 		  </td>
 		  <td>
 			  <table>
-				  <th>
-					  <tr>
-						  <td>Nested Table 1</td>
-					  </tr>
-				  </th>
+				  <th>Nested Table 1</th>
 				  <tr>
 					  <td>
 						  <ul>
@@ -50,12 +42,8 @@
 		<tr>
 			<td>
 				<table>
-					<th>
-						<tr>
-						  <td colspan="2">
-							  Nested Table 3
-						  </td>
-						</tr>
+					  <th colspan="2">
+						  Nested Table 3
 					</th>
 				  <tr>
 					  <td><a href="/">Nested Table</a></td>
@@ -66,9 +54,7 @@
 			<td>
 				<table>
 					<th>
-						<tr>
-							<td>Nested Table 4</td>
-						</tr>
+						Nested Table 4
 					</th>
 					<tr>
 						<td style="background-color: black; color:white">HTML</td>
