--- a/main.html
+++ b/main.html
@@ -15,8 +15,8 @@
 						  Nested Table 2
 				  </th>
 				  <tr>
-					  <td>Column 1</td>
-					  <td>Column 2</td>
+					  <th>Column 1</th>
+					  <th>Column 2</th>
 				  </tr>
 				  <tr>
 					  <td>abc</td>
