--- a/main.html
+++ b/main.html
@@ -27,9 +27,9 @@
 		  <td>
 			  <table>
 				  <th>Nested Table 1</th>
-						  <li>List item</li>
-						  <li>List item</li>
-						  <li>List item</li>
+						  <li>List item 1</li>
+						  <li>List item 2</li>
+						  <li>List item 3</li>
 			  </table>
 		  </td>
 	  </tr>
